# secret-vault

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: env.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: contacts.rs  exports.rs  mod.rs  notes.rs  passwords.rs  users.rs
src-tauri/src/db/: db.rs  db.sql
src-tauri/src/exports/: contacts.rs  mod.rs  notes.rs  passwords.rs
src-tauri/src/models/: contacts.rs  mod.rs  notes.rs  passwords.rs  phones.rs  users.rs
src-tauri/src/security/: password.rs
src/components/: Buttons.tsx  Header.tsx  Icons.tsx  ImageUpload.tsx  LogIn.tsx  NavBar.tsx
src/components/ContactPage/: CardContact.tsx  ContactsPage.tsx
src/components/Modals/: BaseModal.tsx  ContactModal.tsx  ErrorModal.tsx  ExportModal.tsx  NoteModal.tsx  PasswordModal.tsx  WarningModal.tsx
src/components/NotesPage/: ItemNote.tsx  NoteContent.tsx  NotesPage.tsx  SearchNote.tsx
src/components/PasswordsPage/: CardPassword.tsx  PasswordsPage.tsx
src/components/SettingsPage/: SettingsPage.tsx
src/components/SideBar/: LiButtonPage.tsx  Sidebar.tsx  UserMenu.tsx
src/hooks/: useApp.tsx
src/hooks/Contacts/: useCardContact.tsx  useContact.tsx  useContactModal.tsx
src/hooks/Login/: useLogin.tsx
src/hooks/Notes/: useNote.tsx  useNoteContent.tsx  useNoteModal.tsx
src/hooks/Passwords/: useCardPassword.tsx  usePassword.tsx  usePasswordModal.tsx
src/hooks/Settings/: useExportModal.tsx  useSettings.tsx
src/lib/: date.ts  password-functions.ts  predefinedAccounts.ts  theme.ts
src/types/: types.tsx
