[package]
name = "secret-vault"
version = "0.1.3"
description = "Aplicación de escritorio para la gestión de información privada"
authors = ["Wilber Delfín Hernández Peña <wilberdhp.dev@gmail.com>"]
edition = "2021"
license = "Creative Commons Attribution-NonCommercial-NoDerivatives 4.0"
repository = "https://github.com/wilberdhp/secret-vault"
keywords = ["tauri", "desktop", "react", "secure", "passwords", "contacts", "notes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secret_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.2"

tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }

libsqlite3-sys = { version = "0.27", features = ["bundled-sqlcipher"] }

argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
rand = "0.8"
hex = "0.4"

# Recomendadas para seguridad
dotenvy = "0.15.7"
secrecy = "0.8"
zeroize = "1.7"

# Exportación
csv = "1.3"
zip = "0.6"
tauri-plugin-dialog = "2"


[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
